--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,19 @@
 <div class="header">
   Junction details
 </div>
+
+<form>
+  Select arms
+<select>
+  <option disabled>Select arm</option>
+  <option> 2</option>
+  <option>3 </option>
+  <option>4 </option>
+  <option>5 </option>
+  <option>6 </option>
+  <option>7 </option>
+  <option>8 </option>
+</select>
+  
+
+</form>
