--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="box">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1299 1291">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1299 1291">
 	<g id="Layer_2" data-name="Layer 2">
 		<g id="Layer_1-2" data-name="Layer 1">
-            <g class="arm" *ngFor="let arm of arms; let i= index" [style.transform]="'rotate('+angle*i+'deg)'">
+            <g class="arm" id="" *ngFor="let arm of arms; let i= index" [style.transform]="'rotate('+angle*i+'deg)'">
                     <rect class="cls-1" y="578" width="646" height="155"/>
                     <rect class="cls-2" x="314.5" y="589.5" width="79" height="20"/>
                     <rect class="cls-2" x="314" y="618" width="79" height="20"/>
@@ -15,6 +15,37 @@
 			<path class="cls-2" d="M646,420a225.28,225.28,0,1,1-88,17.76A224.58,224.58,0,0,1,646,420m0-5c-127.58,0-231,103.42-231,231S518.42,877,646,877,877,773.58,877,646,773.58,415,646,415Z"/>
 		</g>
 	</g>
+</svg> -->
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1299 1291">
+    <g id="Layer_2" data-name="Layer 2">
+        <g id="Layer_1-2" data-name="Layer 1">
+            <!-- THIS IS ARM -> --> <g class="arm" id="" *ngFor="let arm of arms; let i= index" [style.transform]="'rotate('+angle*i+'deg)'">
+                <rect class="cls-1" y="578" width="646" height="155" />
+                <g class="zebra-crossing">
+                        <rect class="cls-2" x="314.5" y="589.5" width="79" height="20" />
+                        <rect class="cls-2" x="314" y="618" width="79" height="20" />
+                        <rect class="cls-2" x="314" y="645" width="79" height="20" />
+                        <rect class="cls-2" x="314" y="673" width="79" height="20" />
+                        <rect class="cls-2" x="314" y="701" width="79" height="20" />
+                </g>    
+                <line class="cls-5 arm-divider" x1="284.4" y1="654.5" x2="11.8" y2="654.5" />
+                <line class="cls-4 zebra-crossing-seperator" x1="302" y1="578" x2="302" y2="733" />
+                <g class="texts" *ngFor="let arm of arms; let i= index" >
+                        <text class="cls-6 arm-text" transform="translate(20.12 630.53) rotate(-90)">
+                            Arm 1
+                        </text>
+                        <text class="cls-6 slave-text" transform="translate(20.12 730.57) rotate(-90)">
+                            Slave 1
+                        </text>
+                </g>
+            </g>
+
+            <path class="cls-2" d="M645.5,826C546,826,465,745,465,645.5S546,465,645.5,465,826,546,826,645.5,745,826,645.5,826Z" />
+            <path class="cls-1" d="M645.5,540a105.5,105.5,0,1,1-74.6,30.9A105.5,105.5,0,0,1,645.5,540m0-150C504.39,390,390,504.39,390,645.5S504.39,901,645.5,901,901,786.61,901,645.5,786.61,390,645.5,390Z" />
+            <path class="cls-2" d="M646,420c124.42.18,225.13,101.19,225,225.61s-101.19,225.13-225.61,225S420.21,769.37,420.39,645A225.28,225.28,0,0,1,646,420m0-5c-127.58,0-231,103.42-231,231S518.42,877,646,877,877,773.58,877,646,773.58,415,646,415Z" />
+        </g>
+    </g>
 </svg>
 </div>
 
