added rotations to arm

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,9 @@
   width: 400px;
   transform: translate(-50%, -50%);
 }
-
+#svg{
+  transition:0.5s;
+}
 .arm {
   transform-origin: 50%;
   transform: rotateZ(0deg);
@@ -45,4 +47,28 @@
   font-size: 18px;
   font-family: MyriadPro-Bold, Myriad Pro;
   font-weight: 700;
+}
+
+.buttons{
+  display:flex;
+  justify-content: space-between;
+}
+.buttons button{
+    background: #689F38;
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    transition:0.5s;
+}
+.buttons button:hover{
+  background:#7CB342
+  ;
+}
+
+.buttons .rotatrLeft{
+
 }
