Fixed rotation bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,8 +49,8 @@
     </g>
 </svg>
 <div class="buttons">
-    <button class="rotatrLeft" (click)="rotate('left')">↺</button>
-    <button class="rotatrRight" (click)="rotate('right')">↻</button>
+        <button class="rotatrRight" (click)="rotate('right')">↺</button>
+    <button class="rotatrLeft" (click)="rotate('left')">↻</button>
 </div>
 </div>
 
