Updated traffic junction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,136 +1,1 @@
-<div class="box" id="box">
-  <div class="infograph">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1299 1291" id="svg">
-      <g id="Layer_2" data-name="Layer 2">
-        <g id="Layer_1-2" data-name="Layer 1">
-          <path class="circle" d="M256,.5C114.89.5.5,114.89.5,256S114.89,511.5,256,511.5,511.5,397.11,511.5,256,397.11.5,256,.5Z"
-            style="transform: translate(395px,382px);" />
-          <g class="arm" id="" *ngFor="let arm of arms; let i= index" [style.transform]="'rotate('+angle*i+'deg)'">
-            <rect class="cls-1" y="578" width="646" height="155" />
-            <!-- Lamp indicators: left,straight,right,red,amber,pedestrian red,pedestrian green,u-turn, -->
-            <g id="Layer_1-2" data-name="Layer 1" style="transform:translate(2em,24.5em)">
-              <g data-lamp="green_left" class="lamp">
-                <path class="cls-55" d="M398.4,241.6l-45.83.11a4.89,4.89,0,0,1,0-9.79l40.93-.1-.05-22.43c0-.1,0-.2,0-.3l-9.3,3.7a.79.79,0,0,1-.93-1.22L398.16,192a.79.79,0,0,1,1.26,0l15,19.46a.79.79,0,0,1,.17.48.79.79,0,0,1-1.09.74l-9.93-3.9h-.42a5,5,0,0,1,0,.54l.06,27.32A4.89,4.89,0,0,1,398.4,241.6Z" />
-              </g>
-              <g data-lamp="green_straight" class="lamp">
-                <path class="cls-55" d="M422.29,265.14,399,250.1a1.13,1.13,0,0,0-1.16,0,.75.75,0,0,0-.3.93l4.4,9.32h-.35l-21.88-.06v0l-26.68,0h-.12a4.76,4.76,0,0,0-4.44,5,4.86,4.86,0,0,0,4.77,4.77l26.51,0v.52l0-.52,21.83,0a5.66,5.66,0,0,0,.65,0v.43l-4.68,10a.71.71,0,0,0,.31.92,1.11,1.11,0,0,0,1.16,0L422.3,266.4l.12-.1A.74.74,0,0,0,422.29,265.14Z" />
-              </g>
-              <g data-lamp="green_right" class="lamp">
-                <path class="cls-55" d="M403.47,295.54l-.06,27.32a5,5,0,0,1,0,.54h.42l9.93-3.9a.8.8,0,0,1,.92,1.23l-15,19.46a.79.79,0,0,1-1.26,0l-14.94-19.53a.79.79,0,0,1,.93-1.22l9.3,3.7c0-.1,0-.2,0-.3l.05-22.43-40.93-.1a4.89,4.89,0,1,1,0-9.79l45.83.11A4.89,4.89,0,0,1,403.47,295.54Z" />
-              </g>
-              <g data-lamp="red" class="lamp">
-                <circle class="red_lamp cls-77" cx="376.22" cy="265.44" r="35.63" />
-              </g>
-              <g data-lamp="amber" class="lamp">
-                <circle class="amber_lamp cls-77" cx="376.22" cy="265.44" r="35.63" />
-              </g>
-              <g data-lamp="pedestrian_green" class="lamp" style="transform-origin: top;">
-                <path class="cls-88 ped_green" d="M392.36,258.75a8.92,8.92,0,0,0,3.08,6.52,9.29,9.29,0,0,0,6.82,2.46,9.55,9.55,0,0,0,6.65-3,8.67,8.67,0,0,0,2.58-6.7,8.92,8.92,0,0,0-3.08-6.52,9.76,9.76,0,0,0-6.82-2.58,8.9,8.9,0,0,0-6.65,3A9.07,9.07,0,0,0,392.36,258.75Z" />
-                <path class="cls-88 ped_green" d="M360.8,290.88,368.23,277l18-11.49a10,10,0,0,0,4-8.09,9.26,9.26,0,0,0-2.83-6.27l-17.52-17a5.54,5.54,0,0,0-2.27-1l-19.41-2.09h-.5a4.3,4.3,0,0,0-4.24,4.32,3.72,3.72,0,0,0,1.28,2.88,5.43,5.43,0,0,0,2.78,1.36l16.63,1.61,6.1,6-46.38-5.13-22-9.62a8.81,8.81,0,0,0-2.77-.48,6.33,6.33,0,0,0-4.64,1.93,5.56,5.56,0,0,0-1.6,4.67,5.83,5.83,0,0,0,3.57,5.51l23.76,10.36a2.87,2.87,0,0,1,.88.24q.63.25,1.14.49a2.24,2.24,0,0,0,1,.24l11.34,1.16-37.17,11.16q-4.52,1.8-4.22,6.33a6,6,0,0,0,1.93,4.39,6.33,6.33,0,0,0,4.67,1.85,2.06,2.06,0,0,0,.63-.13,2.08,2.08,0,0,1,.63-.13l51.48-15.57,16.88,1.61-6.76,4.34a4.49,4.49,0,0,0-1.25,1.27l-8.18,14.93a8.25,8.25,0,0,0-.49,2,3.94,3.94,0,0,0,1.41,3,4.55,4.55,0,0,0,3.16,1.23A4,4,0,0,0,360.8,290.88Z" />
-              </g>
-              <g data-lamp="pedestrian_red" class="lamp" style="transform-origin: top;">
-                <path class="cls-88 ped_red" d="M392.36,258.75a8.92,8.92,0,0,0,3.08,6.52,9.29,9.29,0,0,0,6.82,2.46,9.55,9.55,0,0,0,6.65-3,8.67,8.67,0,0,0,2.58-6.7,8.92,8.92,0,0,0-3.08-6.52,9.76,9.76,0,0,0-6.82-2.58,8.9,8.9,0,0,0-6.65,3A9.07,9.07,0,0,0,392.36,258.75Z" />
-                <path class="cls-88 ped_red" d="M360.8,290.88,368.23,277l18-11.49a10,10,0,0,0,4-8.09,9.26,9.26,0,0,0-2.83-6.27l-17.52-17a5.54,5.54,0,0,0-2.27-1l-19.41-2.09h-.5a4.3,4.3,0,0,0-4.24,4.32,3.72,3.72,0,0,0,1.28,2.88,5.43,5.43,0,0,0,2.78,1.36l16.63,1.61,6.1,6-46.38-5.13-22-9.62a8.81,8.81,0,0,0-2.77-.48,6.33,6.33,0,0,0-4.64,1.93,5.56,5.56,0,0,0-1.6,4.67,5.83,5.83,0,0,0,3.57,5.51l23.76,10.36a2.87,2.87,0,0,1,.88.24q.63.25,1.14.49a2.24,2.24,0,0,0,1,.24l11.34,1.16-37.17,11.16q-4.52,1.8-4.22,6.33a6,6,0,0,0,1.93,4.39,6.33,6.33,0,0,0,4.67,1.85,2.06,2.06,0,0,0,.63-.13,2.08,2.08,0,0,1,.63-.13l51.48-15.57,16.88,1.61-6.76,4.34a4.49,4.49,0,0,0-1.25,1.27l-8.18,14.93a8.25,8.25,0,0,0-.49,2,3.94,3.94,0,0,0,1.41,3,4.55,4.55,0,0,0,3.16,1.23A4,4,0,0,0,360.8,290.88Z" />
-              </g>
-              <g data-lamp="u-turn" class="lamp">
-                <path class="cls-99" d="M259.76,282.23a.66.66,0,0,0,.33.55l20.55,13a.93.93,0,0,0,.51.14,1,1,0,0,0,.5-.14.63.63,0,0,0,.27-.82l-4.17-8.69v-.37l.57,0v0l8.61-.06c12.27-.09,22.19-8.51,22.12-18.78l0-2.43c-.07-10.27-10.11-18.56-22.38-18.47l-22.23.16.06,8.6,22.23-.16c6.61,0,12,4.42,12.05,9.95l0,2.43c0,5.53-5.3,10.07-11.91,10.11l-8.91.06,3.78-8.16a.63.63,0,0,0-.28-.81,1,1,0,0,0-1,0l-20.36,13.31A.67.67,0,0,0,259.76,282.23Z" />
-              </g>
-            </g>
-            <line class="cls-5 arm-divider" x1="284.4" y1="654.5" x2="11.8" y2="654.5" />
-            <line class="cls-4 zebra-crossing-seperator" x1="302" y1="578" x2="302" y2="733" />
-            <!-- arms and slave names -->
-            <!-- <g class="texts" *ngFor="let arm of arms; let i= index" >
-                                <text class="cls-6 arm-text" transform="translate(20.12 630.53) rotate(-90)">
-                                Arm 1
-                                </text>
-                                <text class="cls-6 slave-text" transform="translate(20.12 730.57) rotate(-90)">
-                                Slave 1
-                                </text>
-                </g> -->
-          </g>
-        </g>
-      </g>
-    </svg>
-    <div class="buttons">
-      <button class="rotatrRight" (click)="rotate('right')">↺</button>
-      <button class="rotatrLeft" (click)="rotate('left')">↻</button>
-    </div>
-  </div>
-  <section>
-    <h3>Create Phase</h3>
-
-    <!-- Salaves Section to select arm -->
-    <div class="slave_selection">
-      <b>Add slaves to select arm</b>
-      <div class="lamps">
-        <div class="lamp_types">
-          <small>Primary Lamps</small>
-          <select>
-            <option>Slave 1</option>
-            <option>Slave 2</option>
-            <option>Slave 3</option>
-            <option>Slave 4</option>
-          </select>
-        </div>
-        <div class="lamp_types">
-          <small>Secondary Lamps</small>
-          <select (change)="showArm()">
-            <option>Slave 1</option>
-            <option>Slave 2</option>
-            <option>Slave 3</option>
-            <option>Slave 4</option>
-          </select>
-        </div>
-        <div class="lamp_types">
-          <small>Tertiary Lamps</small>
-          <select>
-            <option>Slave 1</option>
-            <option>Slave 2</option>
-            <option>Slave 3</option>
-            <option>Slave 4</option>
-          </select>
-        </div>
-      </div>
-    </div>
-
-    <h4 id="selected_arm" style="display:none">Arm 1 selected</h4>
-
-    <!-- Setting phase for current arm -->
-    <section class="phase_selection">
-      <b>Select active lamps</b>
-      <div class="select_phase">
-        <select>
-          <option>Vehicular Phase</option>
-          <option>Filter Green Phase</option>
-          <option>Indicative Phase</option>
-          <option>Vehicular Flashing Phase</option>
-          <option>Pedestrian Red Phase</option>
-          <option>Pedestrian Green Phase</option>
-          <option>Red Phase</option>
-          <option>Amber Phase</option>
-        </select>
-      </div>
-      <div class="lamps_selection">
-        <div class="valid_lamps">
-          <div>
-            <label><input type="checkbox" value="Green Right" (change)="toggleLamp($event)"> <small>Green Right</small></label>
-            <label id="flash1" class="hide"><input type="checkbox" (change)="toggleFlash($event)" value=""><small>Flashing</small></label>
-          </div>
-          <div>
-            <label><input type="checkbox" value="Green Straight"><small>Green Straight</small></label>
-            <label id="flash2" class="hide"><input type="checkbox" value=""><small>Flashing</small></label>
-          </div>
-          <div>
-            <label><input type="checkbox" value="Green Left"><small>Green Left</small></label>
-            <label id="flash3" class="hide"><input type="checkbox" value=""><small>Flashing</small></label>
-          </div>
-        </div>
-      </div>
-    </section>
-    <button>Save</button>
-  </section>
-</div>
-
-
-
-<app-sidebar class="sidebar"></app-sidebar>
+<app-sequence></app-sequence>
